Create basic plant item details page

--- a/app/src/main/resources/plant-details-page.html
+++ b/app/src/main/resources/plant-details-page.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Assignment 1</title>
+    <title>Plant Page Details</title>
   </head>
-  <img src="student.jpg" width="480" height="640"/>
+
+  <img src="student.jpg" width="240" height="320"/>
+
+  <h1>Plant Title</h1>
+  <h2>Plant Price</h2>
+
   <body>
     <hr>
     <ul>
-      <li>MATH 1115 Tuesday, Thursday 16:00 to 17:50</li>
-      <li>INFO 1112 Thursday 10:00 to 12:50</li>
-      <li>INFO 1213 Friday 10:00 to 12:50</li>
+      <li>Name: </li>
+      <li>Description: </li>
+      <li>Plant Type: </li>
+      <li>Alternative Names: </li>
+      <li>Potting Season: </li>
+      <li>Potting Date: </li>
+      <li>Lifespan: </li>
+      <li>Growing Method: </li>
+      <li>Growing Instructions: </li>
     </ul>
     <hr>
-  <!-- Sets the style for the class list -->
+    <script>
+    </script>
+
+    <!-- Sets the style for the class list -->
     <style type="text/css">
       ol {
         list-style-type: none;
@@ -22,19 +36,5 @@
         list-style-type: none;
       }
     </style>
-    <ol>
-
-      <li> MATH 1115
-        <ol> <li> Statistics I </li></ol>
-      </li>
-
-      <li> INFO 1112
-        <ol> <li> Principles of Program Structure &amp; Design I</li> </ol>
-      </li>
-
-      <li> INFO 1213
-        <ol> <li> Web Application Development </li> </ol>
-      </li>
-    </ol>
   </body>
 </html>
