Change plant picture

--- a/app/src/main/resources/plant-details-page.html
+++ b/app/src/main/resources/plant-details-page.html
@@ -4,7 +4,7 @@
     <title>Plant Page Details</title>
   </head>
 
-  <img src="student.jpg" width="240" height="320"/>
+  <img src="plant.png" width="240" height="320"/>
 
   <h1>Plant Title</h1>
   <h2>Plant Price</h2>
