Rename ItemDetailsView -> PlantItemPage
Move PlantItemPage to components submodule

Add toolbar to PlantItemPage

Fix PlantItemPage webview scaling

Add preliminary plant item page js

--- a/app/src/main/resources/plant-details-page.html
+++ b/app/src/main/resources/plant-details-page.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plant Page Details</title>
   </head>
 
   <img src="plant.png" width="240" height="320"/>
+  <script src="plant-item-page.js"></script>
 
   <h1>Plant Title</h1>
   <h2>Plant Price</h2>
@@ -12,15 +15,15 @@
   <body>
     <hr>
     <ul>
-      <li>Name: </li>
-      <li>Description: </li>
-      <li>Plant Type: </li>
-      <li>Alternative Names: </li>
-      <li>Potting Season: </li>
-      <li>Potting Date: </li>
-      <li>Lifespan: </li>
-      <li>Growing Method: </li>
-      <li>Growing Instructions: </li>
+      <li id="name">Name: </li>
+      <li id="desc">Description: </li>
+      <li id="type">Plant Type: </li>
+      <li id="names-alt">Alternative Names: </li>
+      <li id="pot-time">Potting Season: </li>
+      <li id="pot-date">Potting Date: </li>
+      <li id="lifespan">Lifespan: </li>
+      <li id="grow-method">Growing Method: </li>
+      <li id="grow-instructions">Growing Instructions: </li>
     </ul>
     <hr>
     <script>
